--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Covid ID" />
-    <title>Covid ID</title>
+    <meta name="description" content="Coronavirus Disease (COVID-19) Situation Reports" />
+    <title>Coronavirus Disease (COVID-19) Situation Reports</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
